--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,4 +1,5 @@
-name: Jacky Zhao
+# https://quartz.jzhao.xyz/notes/config/ - more info available here
+name: jgc.fyi
 enableToc: true
 openToc: false
 enableLinkPreview: true
@@ -7,23 +8,22 @@ enableCodeBlockTitle: true
 enableCodeBlockCopy: true
 enableCallouts: true
 enableSPA: true
-enableFooter: true
-enableContextualBacklinks: true
+enableFooter: false
+enableContextualBacklinks: false
 enableRecentNotes: false
-enableGitHubEdit: true
+enableGitHubEdit: false
 enableMermaid: true
-GitHubLink: https://github.com/jackyzha0/quartz/tree/hugo/content
+GitHubLink: https://github.com/jgcfyidev/quartz/tree/hugo/content
 search:
   enableSemanticSearch: false
   operandApiKey: "REPLACE-WITH-YOUR-OPERAND-API-KEY"
   operandIndexId: "REPLACE-WITH-YOUR-OPERAND-INDEX-ID"
 description:
-  Host your second brain and digital garden for free. Quartz features extremely fast full-text search,
-  Wikilink support, backlinks, local graph, tags, and link previews.
+  
 page_title:
-  "🪴 Quartz 3.3"
+  "jgc.fyi"
 links:
   - link_name: Twitter
-    link: https://twitter.com/_jzhao
-  - link_name: GitHub
-    link: https://github.com/jackyzha0
+    link: https://twitter.com/jgcfyi
+  - link_name: Mirror
+    link: https://mirror.xyz/jgcfyi.eth
