final draft initial implementations

--- a/data/config.yaml
+++ b/data/config.yaml
@@ -27,3 +27,5 @@ links:
     link: https://twitter.com/jgcfyi
   - link_name: Mirror
     link: https://mirror.xyz/jgcfyi.eth
+  - link_name: Admiration
+    link: /admiration
