--- a/data/config.yaml
+++ b/data/config.yaml
@@ -28,4 +28,4 @@ links:
   - link_name: Mirror
     link: https://mirror.xyz/jgcfyi.eth
   - link_name: Admiration
-    link: /admiration
+    link: /jgcfyi/admiration
