links open in new tabs

--- a/data/config.yaml
+++ b/data/config.yaml
@@ -21,3 +21,5 @@ description: 'A Framework for Building Resilient Communities Anchored in Relatio
 links:
   - link_name: Twitter
     link: https://twitter.com/jgcfyi
+  - link_name: jgc.fyi
+    link: https://jgc.fyi
