3/16 TODOs from doc

--- a/data/config.yaml
+++ b/data/config.yaml
@@ -3,7 +3,7 @@ name: jgc.fyi
 enableToc: true
 openToc: false
 enableLinkPreview: true
-enableLatex: true
+enableLatex: false
 enableCodeBlockTitle: true
 enableCodeBlockCopy: true
 enableCallouts: true
